--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^22.10.7",
     "@umijs/openapi": "^1.13.0",
     "@vitejs/plugin-vue": "^5.2.1",
